# opengl-render

./: CMakeLists.txt  README.md  license.txt
cmake/Modules/: FindGLEW.cmake  FindSFML.cmake
include/: App.h  Matrix4.h  Mesh.h  Shader.h  Vector3.h
resources/: ft.glsl
src/: App.cpp  CMakeLists.txt  Matrix4.cpp  Mesh.cpp  Shader.cpp  Vector3.cpp  main.cpp
